# iroa

./: .env.example  README.md  docker-compose.yml  index.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile.actions  Dockerfile.agent  Dockerfile.data
docs/: AGENT_BUILDER.md  DEMO_VIDEO.md  SUBMISSION.md  architecture.md  deployment-vercel.md  deployment.md  implementation.md  setup.md  testing-examples.md
iroa/: __init__.py  __main__.py  cli.py  config.py  env_loader.py  models.py
iroa/agent/: __init__.py  runner.py
iroa/api/: __init__.py  main.py
iroa/connectors/: __init__.py  base.py  jira_connector.py
iroa/tools/: __init__.py  esql.py  search.py
scripts/: create_test_data.py
services/: __init__.py
services/actions/: __init__.py  config.py  main.py
services/agent/: __init__.py  config.py  main.py  orchestrator.py
services/data/: __init__.py  config.py  main.py
static/: index.html
static/css/: style.css
static/js/: app.js
